[gd_scene load_steps=6 format=3 uid="uid://bccgwgg6qrf05"]

[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_a0sw4"]
[ext_resource type="Texture2D" uid="uid://b4jj3yfv2unya" path="res://art/1bitpack_kenney/Tilesheet/colored_transparent.png" id="2_am3xs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hai6f"]
radius = 6.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6ux0e"]
atlas = ExtResource("2_am3xs")
region = Rect2(391, 425, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yx6qw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ux0e")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 256
collision_mask = 16
mass = 999.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_a0sw4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_hai6f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_yx6qw")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_hai6f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_releaseSelf"]
[connection signal="body_entered" from="Area2D" to="." method="_on_bullet_hit"]
